Various database features, lots of OOP structure. Tag content for sidebar.

--- a/paperroll/app/Paperroll/view/layout/blank.phtml
+++ b/paperroll/app/Paperroll/view/layout/blank.phtml
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:fb="http://ogp.me/ns/fb#">
-{{%head.phtml}}
+{{%head%}}
 <body>
     <div id="page" class="container-fluid">
-    {{%header.phtml}}
+    {{%header%}}
     {{content}}
-    {{%footer.phtml}}
+    {{%footer%}}
     </div>
 </body>
 </html>
