--- a/paperroll/app/Paperroll/view/layout/entry.phtml
+++ b/paperroll/app/Paperroll/view/layout/entry.phtml
@@ -21,12 +21,11 @@
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
                 </div>
-                <h2 class="content-title">{{content_title}}</h2>
                 {{content}}
-                <nav class="pager">
-                    {{pager}}
-                </nav>
                 {{%ad/bottom%}}
+                <div class="random-entries entry-grid row hidden-xs">
+                    {{content_more}}
+                </div>
             </div>
 		</div>
     {{%footer%}}
