--- a/paperroll/app/Paperroll/view/block/entry/home.phtml
+++ b/paperroll/app/Paperroll/view/block/entry/home.phtml
@@ -1,6 +1,6 @@
 <div class="entry-view">
 	<h2 class="entry-title"><a href="{{baseurl}}{{entry url_path}}" title="{{entry title}}">{{entry title}}</a></h2>
-	<p class="entry-date">{{entry published_at}}</p>
+	<p class="entry-date">{{entry publishedAt}}</p>
 	<a href="{{baseurl}}{{entry url_path}}" class="entry-preview-image {{entry mobile}}" title="{{entry title}}">
         <img class="lazy" data-original="{{entry preview}}" alt="{{entry title}}"/>
     </a>
