--- a/paperroll/app/Paperroll/view/block/entry/tag.phtml
+++ b/paperroll/app/Paperroll/view/block/entry/tag.phtml
@@ -1,18 +1,21 @@
-<div class="col-md-12 col-sm-4 col-xs-6">
-    <p class="entry-title"><a href="{{url}}">{{title}}</a></p>
+<div class="col-md-4 col-sm-6 col-xs-12">
+    <p class="entry-title">
+        <a href="{{url}}">{{title}}</a>
+    </p>
     <div class="entry-image hidden-xs">
         <a href="{{url}}" title="{{title}}">
-            <img class="lazy" data-original="{{thumb}}" alt="{{title}}" style="display: inline;" />
+            <img class="lazy" data-original="{{thumb}}" alt="{{title}}">
         </a>
     </div>
     <div class="entry-images visible-xs">
         <div class="image-box col-xs-12 col-sm-4">
             <a href="{{url}}" class="image col-xs-6" title="{{title}}">
-                <img class="lazy" data-original="{{mobile_1}}" alt="{{title}}" />
+                <img class="lazy" data-original="{{mobile_1}}" alt="{{title}}" >
             </a>
             <a href="{{url}}" class="image col-xs-6" title="{{title}}">
-                <img class="lazy" data-original="{{mobile_2}}" alt="{{title}}" />
+                <img class="lazy" data-original="{{mobile_2}}" alt="{{title}}" >
             </a>
         </div>
     </div>
+    <p class="entry-date">{{publishedAt}}</p>
 </div>
