--- a/paperroll/app/Paperroll/view/layout/tag.phtml
+++ b/paperroll/app/Paperroll/view/layout/tag.phtml
@@ -11,11 +11,10 @@
             </div>
             <div class="col-md-9" id="main">
                 {{%ad/top%}}
-                <h2 class="content-title">{{content_title}}</h2>
-                {{content}}
-                <nav class="pager">
-                    {{pager}}
-                </nav>
+                <h2 class="content-title">{{contentTitle}}</h2>
+                <div class="row entry-grid">
+                    {{content}}
+                </div>
                 {{%ad/bottom%}}
             </div>
 		</div>
