--- a/paperroll/app/Paperroll/view/block/entry/calendar.phtml
+++ b/paperroll/app/Paperroll/view/block/entry/calendar.phtml
@@ -1,6 +1,6 @@
 <div class="col-md-12 col-sm-6 col-xs-6">
     <a href="{{baseurl}}tag/calendar" title="Calendar Series">
         <span>{{title}}</span>
-        <img class="lazy" data-original="{{image}}" title="{{title}}" />
+        <img class="lazy" data-original="{{thumb}}" title="{{title}}" />
     </a>
 </div>
