--- a/paperroll/app/Paperroll/view/layout/entry.phtml
+++ b/paperroll/app/Paperroll/view/layout/entry.phtml
@@ -10,17 +10,7 @@
                 {{%ad/sidebar%}}
             </div>
             <div class="col-md-9" id="main">
-                <div class="ad top">
-                    <!-- Content Top -->
-                    <ins class="adsbygoogle"
-                         style="display:block"
-                         data-ad-client="ca-pub-9622612302631221"
-                         data-ad-slot="8363371851"
-                         data-ad-format="auto"></ins>
-                    <script>
-                        (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
-                </div>
+                {{%ad/top%}}
                 {{content}}
                 {{%ad/bottom%}}
                 <div class="random-entries entry-grid row hidden-xs">
