--- a/paperroll/app/Paperroll/view/block/entry/topten.phtml
+++ b/paperroll/app/Paperroll/view/block/entry/topten.phtml
@@ -8,10 +8,10 @@
     <div class="entry-images visible-xs">
         <div class="image-box col-xs-12 col-sm-4">
             <a href="{{url}}" class="image col-xs-6" title="{{title}}">
-                <img class="lazy" data-original="{{mobile_1}}" alt="{{title}}" />
+                <img class="lazy" data-original="{{mobile_1_thumb}}" alt="{{title}}" />
             </a>
             <a href="{{url}}" class="image col-xs-6" title="{{title}}">
-                <img class="lazy" data-original="{{mobile_2}}" alt="{{title}}" />
+                <img class="lazy" data-original="{{mobile_2_thumb}}" alt="{{title}}" />
             </a>
         </div>
     </div>
