--- a/paperroll/app/Paperroll/view/block/header.phtml
+++ b/paperroll/app/Paperroll/view/block/header.phtml
@@ -3,13 +3,13 @@
         <div class="header-banner banner-feature">
         	<div class="logo">
         		<a href="{{baseurl}}">
-            		<img src="{{baseurl}}images/logo.png" alt="Spartacus Wallpaper" />
+            		<img src="{{assetsurl}}images/logo.png" alt="Spartacus Wallpaper" />
                 </a>
         		<ul class="top-nav">
         			<li><a href="{{baseurl}}page/about">about</a></li>
         			<li><a href="{{baseurl}}page/tags">names</a></li>
         			<li><a href="{{baseurl}}page/contact">contact</a></li>
-                    <li><a href="{{baseurl}}changelog">changes</a></li>
+                    <li><a href="{{baseurl}}changelog/{{date_year}}">changes</a></li>
         			<li><a href="{{baseurl}}page/donate">donate</a></li>
         		</ul>
         	</div>
