--- a/paperroll/app/Paperroll/view/block/head.phtml
+++ b/paperroll/app/Paperroll/view/block/head.phtml
@@ -5,16 +5,16 @@
     <title>{{title}}Desktop Backgrounds | Mobile Home Screens | Spartacus Wallpaper</title>
     <meta name="description" content="{{meta_description}}">
     <link href="https://fonts.googleapis.com/css?family=Courgette|Patua+One" rel="stylesheet">
-    <link href="{{baseurl}}css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="{{baseurl}}css/custom.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="{{baseurl}}css/banner.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="{{assetsurl}}css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="{{assetsurl}}css/custom.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="{{assetsurl}}css/banner.css" media="screen" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="/favicon.ico">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="{{baseurl}}js/jquery.lazyload.js"></script>
-    <script src="{{baseurl}}js/custom.js"></script>
-    <script src="{{baseurl}}js/banner.js"></script>
-    <script src="{{baseurl}}js/ad.js"></script>
+    <script src="{{assetsurl}}js/jquery.lazyload.js"></script>
+    <script src="{{assetsurl}}js/custom.js"></script>
+    <script src="{{assetsurl}}js/banner.js"></script>
+    <script src="{{baseUrl}}js/ad.js"></script>
     <script type="text/javascript">
     //<![CDATA[
     	jQuery(document).ready(function(){
