--- a/paperroll/app/Paperroll/view/layout/tag.phtml
+++ b/paperroll/app/Paperroll/view/layout/tag.phtml
@@ -12,9 +12,11 @@
             <div class="col-md-9" id="main">
                 {{%ad/top%}}
                 <h2 class="content-title">{{contentTitle}}</h2>
+                <ul class="years">{{menu}}</ul>
                 <div class="row entry-grid">
                     {{content}}
                 </div>
+                <ul class="years">{{menu}}</ul>
                 {{%ad/bottom%}}
             </div>
 		</div>
