--- a/assets/vsn/css/custom.css
+++ b/assets/vsn/css/custom.css
@@ -33,7 +33,7 @@ img {
 
 .entry-view {
     color:rgb(222,209,167);
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     padding-bottom:10px;
     border-bottom: 2px solid rgba(222,209,167, .5);
 }
@@ -45,7 +45,7 @@ img {
 .entry-content .std {
     font-size:14px;
     margin-top:10px;
-    padding:20px 20px 0;
+    padding: 10px 10px 0;
     color:rgb(222,209,167);
     font-weight: 300;
     border-top: 2px solid rgba(222,209,167, .5);
@@ -104,13 +104,6 @@ img {
 }
 .entry-images .image-box {
     padding:0 0 10px;
-}
-
-.entry-versions,
-.entry-tags,
-.social-media {
-    font-size:14px;
-    margin-top: 30px;
 }
 
 .mobile-preview img {
@@ -511,10 +504,11 @@ td {
         overflow: auto;
         clear:both;
     }
-}
-@media screen and (min-width:992px) {
-    .col-sm-6:nth-of-type(3n+1) {
-        /* clear:left; */
+    .entry-versions,
+    .entry-page .entry-tags,
+    .social-media {
+        font-size:14px;
+        margin-top: 30px;
     }
 }
 @media screen and (min-width: 990px) {
@@ -563,7 +557,6 @@ td {
         /* clear:left; */
     }
 }
-
 @media screen and (max-width: 767px) {
     body {
         border-width: 0 7px;
@@ -588,17 +581,21 @@ td {
         padding-right:0;
     }
     .col-xs-6:nth-child(2n),
-    .entry-images .image:nth-child(2n) {
+    .entry-images .mobile .image:nth-child(2n) {
         padding-left: 3px;
         padding-right: 10px;
     }
     .col-xs-6:nth-child(2n+1),
-    .entry-images .image:nth-child(2n+1) {
+    .entry-images .mobile .image:nth-child(2n+1) {
         padding-right: 3px; 
         padding-left: 10px; 
     }
     .tops > div:nth-child(2n+1) {
+        padding-left:0;
         clear:left;
+    }
+    .tops > div:nth-child(2n) {
+        padding-right:0;
     }
     .ad-middle {
         display: none;
@@ -629,7 +626,8 @@ td {
         width:100%;
         height:auto;
     }
-    .entry-images .image {
+    .tops .image,
+    .entry-images .mobile .image {
         width: 50%;
         margin: 0;
     }
