--- a/paperroll/app/Paperroll/view/block/entry/home.phtml
+++ b/paperroll/app/Paperroll/view/block/entry/home.phtml
@@ -1,14 +1,13 @@
 <div class="entry-view">
-	<h2 class="entry-title"><a href="{{baseurl}}{{entry url_path}}" title="{{entry title}}">{{entry title}}</a></h2>
-	<p class="entry-date">{{entry publishedAt}}</p>
-	<a href="{{baseurl}}{{entry url_path}}" class="entry-preview-image {{entry mobile}}" title="{{entry title}}">
-        <img class="lazy" data-original="{{entry preview}}" alt="{{entry title}}"/>
+    <h2 class="entry-title"><a href="{{url}}" title="{{title}}">{{title}}</a></h2>
+    <p class="entry-date">{{publishedAt}}</p>
+    <a href="{{url}}" class="entry-preview-image" title="{{title}}">
+        <img class="lazy" data-original="{{preview}}" alt="{{title}}"/>
     </a>
-    {{entry mobile_images}}
     <div class="row-fluid">
         <div class="entry-tags">
-            {{entry tags}}
+            {{tags}}
         </div>
     </div>
-	<div class="entry-content">{{entry content}}</div>
+    <div class="entry-content">{{note}}</div>
 </div>
