--- a/paperroll/app/Paperroll/view/block/entry/mobile/default.phtml
+++ b/paperroll/app/Paperroll/view/block/entry/mobile/default.phtml
@@ -41,7 +41,9 @@
         <div class="desktop hidden-xs">
             {{desktopImages}}
         </div>
-        <div class="mobile text-center">No mobile sizes here, <a onclick="jQuery('.desktop.hidden-xs').removeClass('hidden-xs');jQuery('.mobile').hide();">show desktop sizes</a>?</div>
+        <div class="mobile">
+            {{mobileImages}}
+        </div>
 	</div>
     <div id="disqus_thread"></div>
     <script type="text/javascript">
