--- a/paperroll/app/Paperroll/view/block/head.phtml
+++ b/paperroll/app/Paperroll/view/block/head.phtml
@@ -14,7 +14,7 @@
     <script src="{{assetsurl}}js/jquery.lazyload.js"></script>
     <script src="{{assetsurl}}js/custom.js"></script>
     <script src="{{assetsurl}}js/banner.js"></script>
-    <script src="{{baseUrl}}js/ad.js"></script>
+    <script src="{{baseurl}}js/ad.js"></script>
     <script type="text/javascript">
     //<![CDATA[
     	jQuery(document).ready(function(){
