first round admin functionality

--- a/paperroll/app/Paperroll/view/layout/admin.phtml
+++ b/paperroll/app/Paperroll/view/layout/admin.phtml
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:fb="http://ogp.me/ns/fb#">
-{{%page/head%}}
+{{%admin/head%}}
 <body>
-    <div id="page" class="container-fluid">
-    {{%page/header%}}
+    <div class="container-fluid">
+    {{%admin/header%}}
     {{content}}
-    {{%page/footer%}}
     </div>
 </body>
 </html>
