--- a/paperroll/app/Paperroll/view/layout/default.phtml
+++ b/paperroll/app/Paperroll/view/layout/default.phtml
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:fb="http://ogp.me/ns/fb#">
-{{%head%}}
+{{%page/head%}}
 <body>
 	<div class="container-fluid">
-    {{%header%}}
+    {{%page/header%}}
 		<div class="row-fluid">
             <div class="col-md-3" id="sidebar">
-                {{%sidebar%}}
+                {{%page/sidebar%}}
                 {{%ad/sidebar%}}
             </div>
             <div class="col-md-9" id="main">
@@ -19,6 +19,6 @@
                 {{%ad/bottom%}}
             </div>
 		</div>
-    {{%footer%}}
+    {{%page/footer%}}
     </div>
 </body>
