first round admin functionality

--- a/paperroll/app/Paperroll/view/block/admin/login.phtml
+++ b/paperroll/app/Paperroll/view/block/admin/login.phtml
@@ -9,6 +9,6 @@
                 <input type="password" id="password" name="password" placeholder="Password" required autofocus>
             </dd>
         </dl>
-        <button type="submit">Sign in</button>
+        <button type="submit" class="btn-lg">Sign in</button>
     </form>
 </div>
