--- a/paperroll/app/Paperroll/view/layout/admin.phtml
+++ b/paperroll/app/Paperroll/view/layout/admin.phtml
@@ -3,8 +3,8 @@
 {{%admin/head%}}
 <body>
     <div class="container-fluid">
-    {{%admin/header%}}
-    {{content}}
+        {{messages}}
+        {{content}}
     </div>
 </body>
 </html>
