--- a/paperroll/admin/admin.css
+++ b/paperroll/admin/admin.css
@@ -1,37 +1,67 @@
-.ui-selected, .not-name { background-color: #4A5404; }
+.container-fluid {
+    min-height:100vh;
+}
+
+input, select, textarea {
+    color: rgb(36,24,26);
+    background: rgb(222,209,167);
+    font-size:16px;
+}
+
+.ui-selected, .not-name { background-color: rgba(134,155,122,.7); }
 .ui-helper-hidden-accessible {display:none;}
-.ui-autocomplete { background-color: #282F02; }
-#tags-element {width:333px;}
-.calendar {
+.ui-autocomplete { 
+    background-color: rgb(36,24,26);
+    position: absolute;
+}
+
+#tags-element {
+    width:333px;
+    position:relative;
+}
+
+.messages {
+    border:2px solid rgb(134,155,122);
+    background-color: rgba(134,155,122,.7);
+    color:rgb(255,181,112);
+    font-size:16px;
+    padding:5px 15px;
+    margin-top:10px;
+}
+
+.items-grid {
     clear:both;
+    padding-top:15px;
     overflow:auto;
-    width:100%;
-    border-bottom: 1px solid #A4B070;
 }
-.calendar > div {
-    width: 5%;
-    vertical-align: top;
+.items-grid .item {
+    width:20%;
     float:left;
+    padding-right:1%;
+}
+.new .item {
+    width:25%;
+}
+.queue td {
     border: 1px solid rgb(222,209,167);
-    border-width: 1px 1px 0 0;
-    padding: 0 5px;
+    vertical-align:top;
 }
-.calendar > div:nth-child(7n-5), .calendar > div:nth-child(7n-2), .calendar > div:nth-child(7n) {
+.queue .item {
     width: 25%;
+    padding:5px;
 }
-.calendar > div:nth-child(7n-6) {
-    width: 10%;
+.entry-title {
+    padding:0 0 10px;
+    font-size:16px;
 }
-.calendar.reposts > div {
-    width:14%;
+.queue .entry-title {
+    padding:10px 0 0;
 }
-.calendar .entry-title {
-    font-size:.9em;
-}
-.calendar > div.live {
-    opacity:.3;
+.queue .live {
+    opacity:.5;
 }
 .button, button {
     background-color: rgb(68,114,88);
     border:none;
+    float:right;
 }
