--- a/paperroll/app/Paperroll/view/block/admin/item.phtml
+++ b/paperroll/app/Paperroll/view/block/admin/item.phtml
@@ -1,5 +1,7 @@
 <div class="item">
-    <img src="{{thumb}}">
+    <a href="{{url}}">
+        <img src="{{thumb}}">
+    </a>
     <a href="{{url}}">
         <span class="entry-title">{{title}}</span>
     </a>
