--- a/paperroll/app/Paperroll/view/block/admin/queue/itemlive.phtml
+++ b/paperroll/app/Paperroll/view/block/admin/queue/itemlive.phtml
@@ -1,9 +1,9 @@
-<td class="item live">
-    <input type="hidden" name="entry_id[{{queue}}][]" value="{{id}}">
+<td class="item live toggle">
     <img src="{{thumb}}">
     <a href="/edit?id={{id}}">
         <span class="entry-title">{{title}}</span>
     </a>
+    <div class="entry-date">{{publishedAt_short}}</div>
     <div class="clearfix"></div>
     {{queueLabel}}<br />
     {{tags}}
