--- a/paperroll/app/Paperroll/view/block/admin/header.phtml
+++ b/paperroll/app/Paperroll/view/block/admin/header.phtml
@@ -2,7 +2,7 @@
 <h1><a href="/">Entry Queue</a></h1>
 <h3>
     <a href="/phpliteadmin.php" target="_blank">Database</a>&nbsp;|&nbsp;
-    <a href="/showall">View All</a>&nbsp;|&nbsp;
-    <a href="/images">Update Images</a>&nbsp;|&nbsp;
-    <a href="/tags">Tags</a>
+    <a href="/tag/entries">View All</a>&nbsp;|&nbsp;
+    <a href="/entry/images">Update Images</a>&nbsp;|&nbsp;
+    <a href="/tag/list">Tags</a>
 </h3>
