--- a/paperroll/app/Paperroll/view/block/admin/header.phtml
+++ b/paperroll/app/Paperroll/view/block/admin/header.phtml
@@ -4,5 +4,5 @@
     <a href="/phpliteadmin.php" target="_blank">Database</a>&nbsp;|&nbsp;
     <a href="/tag/entries">View All</a>&nbsp;|&nbsp;
     <a href="/entry/images">Update Images</a>&nbsp;|&nbsp;
-    <a href="/tag/list">Tags</a>
+    <a href="/tag/listing">Tags</a>
 </h3>
