--- a/paperroll/app/Paperroll/view/block/admin/tag/view.phtml
+++ b/paperroll/app/Paperroll/view/block/admin/tag/view.phtml
@@ -1,5 +1,5 @@
 <h2>{{contentTitle}}</h2>
-<a href="/">Back</a>
+<a href="{{back}}">Back</a>
 <form action="/tag/save" method="post">
     <div class="tags items-grid">
         {{items}}
