--- a/app/Paperroll/view/block/admin/queue/itemlive.phtml
+++ b/app/Paperroll/view/block/admin/queue/itemlive.phtml
@@ -1,14 +1,14 @@
 <td class="item live toggle">
+    <div class="entry-date">{{publishedAt_short}}</div>
     <img src="{{thumb}}">
-    <a href="/edit?id={{id}}">
+    <a href="/entry/edit?id={{id}}">
         <span class="entry-title">{{title}}</span>
     </a>
-    <div class="entry-date">{{publishedAt_short}}</div>
     <div class="clearfix"></div>
     {{queueLabel}}<br />
     {{tags}}
     <div class="clearfix"></div>
     <a href="{{url}}">View</a>&nbsp;|&nbsp;
-    <a href="\edit?id={{id}}">Edit</a>&nbsp;|&nbsp;
-    <a href="\delete?id={{id}}">Delete</a>
+    <a href="/entry/edit?id={{id}}">Edit</a>&nbsp;|&nbsp;
+    <a href="/entry/delete?id={{id}}">Delete</a>
 </td>
