more style changes, queue fixes, banners

--- a/app/Paperroll/view/block/admin/header.phtml
+++ b/app/Paperroll/view/block/admin/header.phtml
@@ -1,6 +1,6 @@
-
-<h1><a href="/">Entry Queue</a></h1>
 <h3>
+    <a href="/">Queue</a>&nbsp;|&nbsp;
+    <a href="{{baseurl}}">View</a>&nbsp;|&nbsp;
     <a href="/phpliteadmin.php" target="_blank">Database</a>&nbsp;|&nbsp;
     <a href="/tag/entries">View All</a>&nbsp;|&nbsp;
     <a href="/entry/images">Update Images</a>&nbsp;|&nbsp;
