--- a/app/Paperroll/view/block/admin/queue/view.phtml
+++ b/app/Paperroll/view/block/admin/queue/view.phtml
@@ -1,3 +1,4 @@
+<h2>Entry Queue</h2>
 <form id="calendar" action="\queue\reorder" method="post">
     <table id="queue" class="queue">
         <thead>
