--- a/app/Paperroll/view/block/entry/ultrawide.phtml
+++ b/app/Paperroll/view/block/entry/ultrawide.phtml
@@ -1,11 +1,11 @@
-<div class="col-sm-6 col-xs-12">
+<div class="col-xs-12">
     <p class="entry-title">
         <a href="{{url}}">{{title}}</a>
     </p>
+    <p class="entry-date">{{publishedAt_short}}</p>
     <div class="entry-image">
         <a href="{{url}}" title="{{title}}">
             <img class="lazy" data-original="{{thumb}}" alt="{{title}}">
         </a>
     </div>
-    <p class="entry-date">{{publishedAt_short}}</p>
 </div>
