--- a/app/Paperroll/view/block/tag/index.phtml
+++ b/app/Paperroll/view/block/tag/index.phtml
@@ -1,6 +1,4 @@
-<h2>{{title}}</h2>
-<div class="row">
-    <ul class="col-sm-4">{{column_1}}</ul>
-    <ul class="col-sm-4">{{column_2}}</ul>
-    <ul class="col-sm-4">{{column_3}}</ul>
+<h2 class="content-title">{{title}}</h2>
+<div class="{{class}}">
+    <ul>{{tags}}</ul>
 </div>
