--- a/app/Paperroll/view/layout/admin.phtml
+++ b/app/Paperroll/view/layout/admin.phtml
@@ -3,6 +3,7 @@
 {{%admin/head%}}
 <body>
     <div class="container-fluid">
+        {{%admin/header%}}
         {{messages}}
         {{content}}
     </div>
