--- a/assets/vsn/css/custom.css
+++ b/assets/vsn/css/custom.css
@@ -16,7 +16,6 @@ img {
 }
 
 #main {
-    /* background: rgba(68,114,88,.2); */
     margin-top:15px;
     padding-top: 5px;
     position: relative;
@@ -69,7 +68,7 @@ img {
 .entry-view .entry-date {
     font-family: 'Courgette', sans-serif;
     font-size:15px;
-    float: right;
+    margin-top: 8px;
 }
 
 .entry-title {
@@ -92,10 +91,12 @@ img {
 
 .content-title {
     font-size: 26px;
+    line-height: 56px;
     font-weight: normal;
-    margin:20px 0;
+    margin: 0;
     font-family: 'Courgette', sans-serif;
     color:rgb(68,114,88);
+    text-align:center;
 }
 .subtitle {
     font-family:'Patua One', serif;
@@ -281,7 +282,7 @@ ul.years {
 
 ul.years li {
     float:left;
-    margin-right:10px;
+    margin-right: 9px;
 }
 
 #sidebar .tops .entry-date {
@@ -291,7 +292,7 @@ ul.years li {
 .entry-grid {
     clear:both;
     list-style: none;
-    padding: 0 7px;
+    padding: 0;
 }
 .entry-grid > div {
     padding-left:7px;
@@ -393,7 +394,7 @@ body > .container-fluid {
     border-width: 0 10px;
     margin:0 auto;
     padding: 10px 15px 30px;
-    max-width: 1306px;
+    max-width: 1302px;
 }
 a {
     color:rgb(255,181,112);
@@ -467,6 +468,26 @@ td {
     text-align:center;
     display:block;
 }
+.entry-page .entry-tags ul {
+    margin: 0 0 10px;
+    padding: 0;
+}
+.entry-page .social-media ul {
+    margin:0;
+    padding-left:0;
+}
+.tag-index ul {
+    margin:0 .3em;
+    padding: 0;
+}
+.tag-index li {
+    margin-left: 10px;
+    text-indent: -10px;
+}
+.tag-cloud li {
+    display: inline-block;
+    margin-right: 5px;
+}
 @media screen and (min-width:768px) {
     .entry-images .image {
         height: 160px;
@@ -508,6 +529,7 @@ td {
     .social-media {
         font-size:14px;
         margin-top: 30px;
+        padding: 0 .3em;
     }
 }
 @media screen and (min-width: 992px) {
@@ -520,6 +542,11 @@ td {
     }
     #main {
         padding-right: 0;
+    }
+    .tag-index {
+        -webkit-column-count:4;
+        -moz-column-count:4;
+        column-count:4;
     }
 }
 
@@ -552,6 +579,11 @@ td {
     .col-sm-4, .tops {
         padding-left:5px;
         padding-right:5px;
+    }
+    .tag-index {
+        -webkit-column-count:3;
+        -moz-column-count:3;
+        column-count:3;
     }
 }
 @media screen and (min-width: 768px) and (max-width: 990px) {
@@ -729,5 +761,10 @@ td {
     }
     #copy {
         margin:0;
+    }
+    .tag-index {
+        -webkit-column-count:2;
+        -moz-column-count:2;
+        column-count:2;
     }
 }
