A bunch of style changes and minor tweaks.

--- a/app/Paperroll/view/block/page/sidebar.phtml
+++ b/app/Paperroll/view/block/page/sidebar.phtml
@@ -1,5 +1,5 @@
-<p class="section-head">Wallpapers by Type:</p>
-<ul>
+<p class="section-head">Wallpapers by Type</p>
+<ul class="kinds">
     {{kinds}}
 </ul>
 <ul class="social-contact">
@@ -7,15 +7,15 @@
     <li class="facebook"><a href="http://www.facebook.com/spartacuswallpaper">Spartacus Wallpaper</a></li>
     <li class="pinterest"><a href="http://www.pinterest.com/spartacuswalls/">spartacuswalls</a></li>
 </ul>
-<p class="section-head">Calendar Series:</p>
-<div class="row">
+<p class="section-head">Calendar Series</p>
+<div class="row calendar">
 {{calendar}}
 </div>
-<p class="section-head">Wallpapers by Year:</p>
+<p class="section-head">Wallpapers by Year</p>
 <ul class="years">
     {{tag_years}}
 </ul>
-<p class="section-head">Top 10 Ladies:</p>
+<p class="section-head">Top 10 Ladies</p>
 <div class="row tops">
 {{tag_10}}
 </div>
