--- a/app/Paperroll/view/block/entry/mobile/tag.phtml
+++ b/app/Paperroll/view/block/entry/mobile/tag.phtml
@@ -1,4 +1,4 @@
-<div class="col-sm-6 col-xs-12">
+<div class="col-xs-6 entry-item">
     <p class="entry-title">
         <a href="{{url}}">{{title}}</a>
     </p>
