--- a/app/Paperroll/view/block/tag/kind/mobile.phtml
+++ b/app/Paperroll/view/block/tag/kind/mobile.phtml
@@ -1,4 +1,4 @@
-<div class="col-xs-6 entry-item">
+<div class="col-xs-6 col-sm-4 col-md-3 entry-item">
     <p class="entry-title">
         <a href="{{url}}">{{title}}</a>
     </p>
