--- a/app/Paperroll/view/block/tag/kind/ultrawide.phtml
+++ b/app/Paperroll/view/block/tag/kind/ultrawide.phtml
@@ -1,4 +1,4 @@
-<div class="col-xs-12">
+<div class="col-xs-12 entry-item ultrawide">
     <p class="entry-title">
         <a href="{{url}}">{{title}}</a>
     </p>
