more style tweaks and fixes

--- a/app/Paperroll/view/block/entry/default.phtml
+++ b/app/Paperroll/view/block/entry/default.phtml
@@ -18,7 +18,7 @@
             <p class="entry-date" property="datePublished">{{publishedAt}}</p>
             <a href="{{mainImage}}" class="entry-preview-image" title="{{title}}">
                 <img class="lazy" data-original="{{preview}}" alt="{{title}}"/>
-                <span class="visible-xs">Desktop</span>
+                <span class="caption visible-xs">Desktop</span>
             </a>
         </div>
         <div class="col-sm-2">
