--- a/app/Paperroll/view/block/entry/image.phtml
+++ b/app/Paperroll/view/block/entry/image.phtml
@@ -3,6 +3,6 @@
     <meta property="width" content="{{width}} px">
     <meta property="height" content="{{height}} px">
     <img property="thumbnailUrl" class="lazy" data-original="{{thumb}}" alt="{{title}}">
-    <span property="caption" content="{{title}} - {{kind}}">{{kind}}</span>
+    <span class="caption" property="caption" content="{{title}} - {{kind}}">{{kind}}</span>
 </a>
 
