--- a/app/Paperroll/view/block/page/head.phtml
+++ b/app/Paperroll/view/block/page/head.phtml
@@ -8,7 +8,7 @@
     <link href="{{assetsurl}}css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="{{assetsurl}}css/custom.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="{{assetsurl}}css/banner.css" media="screen" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon.png">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="{{assetsurl}}js/jquery.lazyload.js"></script>
