favicon, fix image check logic

--- a/app/Paperroll/view/block/page/head.phtml
+++ b/app/Paperroll/view/block/page/head.phtml
@@ -4,6 +4,7 @@
     {{head}}
     <title>{{title}}Desktop Backgrounds | Mobile Home Screens | Spartacus Wallpaper</title>
     <meta name="description" content="{{meta_description}}">
+    <meta name="p:domain_verify" content="2cdb7d42e3b6dc99c45a792f1547d4d4"/>
     <link href="https://fonts.googleapis.com/css?family=Courgette|Patua+One" rel="stylesheet">
     <link href="{{assetsurl}}css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="{{assetsurl}}css/custom.css" media="screen" rel="stylesheet" type="text/css" />
