--- a/app/Paperroll/view/block/page/head.phtml
+++ b/app/Paperroll/view/block/page/head.phtml
@@ -5,7 +5,7 @@
     <title>{{title}}Desktop Backgrounds | Mobile Home Screens | Spartacus Wallpaper</title>
     <meta name="description" content="{{meta_description}}">
     <meta name="p:domain_verify" content="2cdb7d42e3b6dc99c45a792f1547d4d4"/>
-    <link href="https://fonts.googleapis.com/css?family=Courgette|Patua+One" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Courgette|Patua+One" rel="stylesheet">
     <link href="{{assetsurl}}css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="{{assetsurl}}css/custom.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="{{assetsurl}}css/banner.css" media="screen" rel="stylesheet" type="text/css" />
@@ -26,7 +26,7 @@
             var width = 626;
             var height = 436;
             var yourPageToShare = location.href;
-            var sharerUrl = 'https://www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(yourPageToShare);
+            var sharerUrl = '//www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(yourPageToShare);
             var l = window.screenX + (window.outerWidth - width) / 2;
             var t = window.screenY + (window.outerHeight - height) / 2;
             var winProps = ['width='+width,'height='+height,'left='+l,'top='+t,'status=no','resizable=yes','toolbar=no','menubar=no','scrollbars=yes'].join(',');
