--- a/app/Paperroll/view/block/page/sidebar.phtml
+++ b/app/Paperroll/view/block/page/sidebar.phtml
@@ -3,7 +3,7 @@
     {{kinds}}
 </ul>
 <ul class="social-contact">
-    <li class="twitter"><a href="https://twitter.com/spartacuswalls">@spartacuswalls</a></li>
+    <li class="twitter"><a href="http://twitter.com/spartacuswalls">@spartacuswalls</a></li>
     <li class="facebook"><a href="http://www.facebook.com/spartacuswallpaper">Spartacus Wallpaper</a></li>
     <li class="pinterest"><a href="http://www.pinterest.com/spartacuswalls/">spartacuswalls</a></li>
 </ul>
@@ -20,7 +20,7 @@
 {{tag_10}}
 </div>
 <ul class="social-contact">
-    <li class="twitter"><a href="https://twitter.com/spartacuswalls">@spartacuswalls</a></li>
+    <li class="twitter"><a href="http://twitter.com/spartacuswalls">@spartacuswalls</a></li>
     <li class="facebook"><a href="http://www.facebook.com/spartacuswallpaper">Spartacus Wallpaper</a></li>
     <li class="pinterest"><a href="http://www.pinterest.com/spartacuswalls/">spartacuswalls</a></li>
 </ul>
